--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sample": "^0.0.2",
     "sass": "^1.52.3",
     "typescript": "^4.7.4",
+    "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
