--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sample": "^0.0.2",
-    "sass": "^1.52.3",
+    "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
@@ -48,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^2.5.0",
+    "sass-loader": "^13.0.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
