--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "sample": "^0.0.2",
     "sass": "^1.53.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
