--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/simonwep__selection-js": "^1.7.0",
     "@types/styled-components": "^5.1.25",
+    "@viselect/react": "^3.0.0-beta.13",
     "axios": "^0.27.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
