--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
+    "use-hooks": "^2.0.0-rc.5",
     "usehooks-ts": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
